# DDFramework

./: .commit-msg-tmp  .editorconfig  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CONSTELLATION.md  Cargo.toml  DDFRAMEWORK.md  DOCTRINE.md  GLOSSARY_ENGINE_NAMES.md  LANGUAGES.md  LICENSE  LICENSE-COMMERCIAL  LICENSE-NONCOMMERCIAL  Makefile  README.md  RITUALS.md  WAIVERS.md  constellation.toml  doctrine.toml
.cargo/: config.toml
AO/: .gitignore  AGENTS.md  AGENT_LIFECYCLE.md  ARCHITECTURE.md  Cargo.toml  DOCTRINE_ALIGNMENT.md  GLOSSARY_AGENT_SHELL.md  PHASE6_MIGRATION.md  README.md  RITUALS.md  SECURITY_MODEL.md
AO/config/: shell.toml.example
AO/config/ceremony/: OPERATOR_APPROVAL_TOKEN.example
AO/crates/ca-shell/: Cargo.toml
AO/crates/ca-shell/src/: config.rs  kernel.rs  ledger_record.rs  lib.rs  main.rs  rituals.rs
AO/crates/ca-shell/tests/: advisory_gate.rs  shell_ledger.rs
AO/engines/: README.md
AO/ledger/: README.md
AO/python/: README.md  pyproject.toml
AO/python/src/ao_shell/: __init__.py  cli.py
advisories/: SPEC.md  stream.jsonl
ceremonies/: 0001-verify.toml  0002-deploy.toml  0003-lan-scan.toml  0004-amend-doctrine.toml  0005-file-waiver.toml  0006-ghost-advise.toml  0007-kernelize.toml  README.md
ddf-core/: KERNEL_API_MAP.md  README.md
ddf-core/ddf/: Cargo.toml
ddf-core/ddf/src/: lib.rs  main.rs
ddf-core/ddf_py/: README.md  pyproject.toml
ddf-core/ddf_py/ddf/: __init__.py  __main__.py  _sim_cli.py
ddf-core/simulation/: README.md  __init__.py  advisory_replay.py  doctrine_diff.py  drift_simulation.py  ledger_replay.py  ritual_dryrun.py
ddf-core/tests/: test_advisory_replay.py  test_doctrine_diff.py  test_drift_simulation.py  test_kernel_api.py  test_kernel_structure.py  test_ledger_replay.py  test_no_behavior_change.py  test_ritual_dryrun.py  test_sim_cli.py
ddf-exec-core/: Cargo.toml  build.rs
ddf-exec-core/src/: lib.rs  main.rs  timestamp.rs
ddf-exec-core/tests/: canonical_vectors.rs  genesis_roundtrip.rs  ledger_append.rs  normalize_vectors.rs  sha256_vectors.rs
docs/: RENAME_COMPATIBILITY_STRATEGY.md  RENAME_IMPACT_ANALYSIS.md  VISUAL_LAYERS.md
ghost-observer/: README.md  pyproject.toml
ghost-observer/ghost/: __init__.py  __main__.py  advisor.py  advisory_writer.py  model.py  reader.py
ghost-observer/ghost/rules/: __init__.py  r001_doctrine_drift.py  r002_constellation_drift.py  r003_binary_stale.py  r004_waiver_expiring.py  r005_unknown_event_kind.py  r006_timestamp_regression.py  r007_ledger_staleness.py
ghost-observer/tests/: test_advisor.py  test_advisory_chain.py  test_reader.py  test_readonly_on_main_ledger.py
hyperion-net/: Cargo.toml
hyperion-net/c-primitives/: README.md  sockets.c  sockets.h
hyperion-net/src/: lib.rs
ledger/: SPEC.md  _write_genesis.py  events.jsonl
phantom-core/: Cargo.toml  build.rs
phantom-core/src/: canonical.rs  ledger.rs  lib.rs  main.rs  sha256.rs
phantom-core/tests/: canonical_vectors.rs  genesis_roundtrip.rs  ledger_append.rs  normalize_vectors.rs  sha256_vectors.rs
tools/: append_ledger.py  verify_ledger.py
