[workspace]
resolver = "2"
members  = [
    "phantom-core",
    "hyperion-net",
]

[workspace.package]
version      = "0.6.0"
edition      = "2021"
rust-version = "1.95.0"
license      = "LicenseRef-Shrike-Dual"
publish      = false

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"
strip         = "symbols"
incremental   = false

[profile.dev]
opt-level   = 0
incremental = false
