[package]
name         = "phantom-core"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
publish      = { workspace = true }
description  = "Shrike Phantom — sovereign, ceremony-first ritual core."

[[bin]]
name = "phantom"
path = "src/main.rs"
# Disable cargo's synthetic test runner for this bin. main.rs contains
# no `#[test]` functions; the integration suite lives in tests/*.rs.
# This also sidesteps Windows Application Control policies that may
# block execution of freshly-built test-runner binaries.
test = false

[lib]
name = "phantom_core"
path = "src/lib.rs"

# Doctrine: zero dependencies. See LANGUAGES.md §3.2.
[dependencies]

[dev-dependencies]

[build-dependencies]
