[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ao-shell"
version = "0.1.0"
description = "Python shim for the Constitutional Agent Shell CLI (subprocess to ca-shell / ddf)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ao-shell = "ao_shell.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
